fixing margins/spacing on Action buttons on homepage

--- a/homepage/_action.scss
+++ b/homepage/_action.scss
@@ -101,7 +101,7 @@
     height: 40px; /* TOTAL height: 50px; */
     width: 80%;
     padding: 10px 5%;
-    margin-bottom: 33px;
+    margin-bottom: 27px;
     text-align: center;
     text-transform: uppercase;
     border: #fff solid 5px;
@@ -125,6 +125,7 @@
 
 #action .buttons a.actions.first {
     /* programs of study */
+    margin-top: 15px;
     background: url(http://isd.engin.umich.edu/images/button-bg-programs-off.gif) left top repeat
 }
 
